# RAG-protocol-hunter

./: README.md  demo_doc_interactor.ipynb  pyproject.toml
resources/: test_documentation.txt
src/: =0.46.1  protocol_assistant.py  query_assistant.py
src/resources/: test_documentation.txt
src/utils/: rag_helpers.py  response_format.py
